--- a/stundenplaene/stpl_bioinfo-bsc_SS.tex
+++ b/stundenplaene/stpl_bioinfo-bsc_SS.tex
@@ -6,16 +6,16 @@ Semester neben den Informatik- und Biochemie-Vorlesungen auch eine gute Portion 
         \begin{tabular}{|c|c|c|c|c|c|}
         \hline
         Zeit     & Montag        & Dienstag                 & Mittwoch      & Donnerstag               & Freitag            \\ \hline
-        08 -- 09 &               &                          &               &                          &                    \\ \hline
-        09 -- 10 &               &                          &               &                          &                    \\ \hline
+        08 -- 09 &               	&                          &               &                          &                    \\ \hline
+        09 -- 10 &               	&                          &               &                          &                    \\ \hline
         10 -- 11 & Mathematik II &                          & Mathematik II &                          & Biochemie          \\ \cline{1-1} \cline{3-3} \cline{5-5}
         11 -- 12 & (\Matheprof)  &                          & (\Matheprof)  & Biochemie                & (Prof. Nürnberger) \\ \hline
-        12 -- 13 &               &                          &               &                          &                    \\ \cline{1-3} \cline{5-6}
-        13 -- 14 &               &                          & Mathe         &Einf. in die Bioinformatik\footnotemark &                    \\ \cline{1-3} \cline{5-6}
-        14 -- 15 &               & Praktische Informatik II & Rechenzentrum & Praktische Informatik II &                    \\ \cline{1-2} \cline{6-6}
-        15 -- 16 &               & (\Infoprof)              & (ab 24.04.)   & (\Infoprof)              &                    \\ \cline{1-3} \cline{5-6}
-        16 -- 17 &               &                          &               &                          &                    \\ \cline{1-3} \cline{5-6}
-        17 -- 18 &               &                          &               &                          &                    \\ \hline
+        12 -- 13 &              	 	&                          &               &                          &                    \\ \hline
+        13 -- 14 &               	&                          &          &Einf. in die Bioinformatik\footnotemark &                    \\ \cline{1-4} \cline{5-6}
+        14 -- 15 &              		 & Praktische Informatik II & Mathe  & Praktische Informatik II &                    \\ \cline{1-2} \cline{6-6}
+        15 -- 16 &               	& (\Infoprof)              &  Rechenzentrum  & (\Infoprof)              &                    \\ \cline{1-3} \cline{5-6}
+        16 -- 17 &               	&                          &  (ab 23.04.) &                          &                    \\ \cline{1-3} \cline{5-6}
+        17 -- 18 &               	&                          &               &                          &                    \\ \hline
         %18 -- 19 &               &                          &               &                          &                    \\ \cline{1-1} \cline{3-6}
         %19 -- 20 &               &                          &               &                          &                    \\ \hline
         \end{tabular}% <- this one aswell
@@ -33,11 +33,13 @@ wobei auch Tutorinnen und Tutoren anwesend sein werden. Die Teilnahme am Rechenz
 
 \textbf{Info 2}:\\
 Vollständiger Name: Praktische Informatik 2: Imperative und objektorientierte Programmierung\\
-Dieses Semester wird die Vorlesung wieder in Präsenz im Hörsaal N7 auf der Morgenstelle stattfinden.
-Zusätzlich werden Tutorien in Präsenz stattfinden.
+Dieses Semester wird die Vorlesung im Hörsaal N7 auf der Morgenstelle stattfinden.
+Zusätzlich werden Tutorien stattfinden.
 Die Zeiten für die Tutorien werden innerhalb der ersten Woche in den Vorlesungen bekannt gegeben.\\
 % Es wird für die Mathe II und die Info II auch noch freiwillige Zusatz-Tutorium und Einführungskurse geben.\\
 
 \textbf{üBK}:\\
 Im Studienplan wird empfohlen übK\footnote{überfachlich berufsfeldorientierte Kompetenzen, in Zukunft auch Liberal Education genannt}
 mit (insgesamt) 3-6 LP zu belegen. Hier ist dir völlig freigestellt was du belegst, solange es mit ECTS Punkten versehen, benotet und kein Sport ist.\\
+
+\pagebreak
